feat(blog): improve style

--- a/site/_css/blog-post.css
+++ b/site/_css/blog-post.css
@@ -8,7 +8,7 @@
   }
 
   code:not(pre code) {
-    @apply italic brightness-75 text-lg rounded-sm font-mono selection:p-0;
+    @apply text-lg rounded-sm font-mono selection:p-0 bg-tertiary text-tertiary bg-opacity-10;
   }
 
   a {
@@ -17,5 +17,20 @@
 
   p {
     @apply leading-7 text-xl my-5;
+  }
+
+  details {
+    @apply bg-secondary text-onSecondary p-5 mt-5 rounded-lg hover:brightness-105;
+  }
+
+  details[open] {
+    @apply hover:brightness-100;
+  }
+
+  details summary {
+    @apply font-bold cursor-pointer;
+  }
+  details summary::marker {
+    @apply pe-4;
   }
 }
