fix(css): @alwatr/style

--- a/site/_css/base.css
+++ b/site/_css/base.css
@@ -1,6 +1,5 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import '@alwatr/style/main.css';
+@import '@alwatr/style/palettes/h260.css';
 
 body {
   font-family: "system-ui", "-apple-system", "BlinkMacSystemFont", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
