--- a/site/_layouts/blog-post.njk
+++ b/site/_layouts/blog-post.njk
@@ -2,9 +2,9 @@
 layout: base.njk
 ---
 <main class="p-10 mt-24 lg:px-48 box-border">
-  <div class="flex flex-row gap-2 font-black mb-2">
+  <div class="flex flex-row gap-2 mb-2">
     {% for type in type %}
-      <span class="text-primary">{{ type }}</span>
+      <span class="text-primary ring-1 ring-primary px-2 rounded-full">{{ type }}</span>
     {% endfor %}
   </div>
 
@@ -12,7 +12,7 @@ layout: base.njk
     {{ title }}
   </h1>
   <p class="mt-4">{{ description }}</p>
-  <div class="dark:brightness-90 rounded-lg overflow-clip select-none my-10 text-center drop-shadow-lg">
+  <div class="dark:brightness-90 rounded-lg overflow-clip select-none my-10 text-center drop-shadow-lg [&_img]:w-full">
     {% image socialImage, socialImageAlt or "Cover post" %}
   </div>
 
