feat(home): add blog post list

--- a/site/en/home.njk
+++ b/site/en/home.njk
@@ -1,12 +1,9 @@
 ---
 title: Home
 permalink: /
-layout: null
 eleventyNavigation:
   key: Home
   order: 0
 ---
 
-<h1>Hi</h1>
-
-<a href="/en/blog.html">Blog</a>
+{% include "blog-post-list.njk" %}
