feat: add inter font

--- a/site/_css/main.css
+++ b/site/_css/main.css
@@ -1,5 +1,5 @@
 @import '@alwatr/style/main.css';
 @import '@alwatr/style/palettes/h260.css';
-@import './vazirmatn-font.css';
+@import './inter-font.css';
 @import './blog-post.css';
 @import './syntax-highlighter.css';
