--- a/site/_css/main.css
+++ b/site/_css/main.css
@@ -3,3 +3,13 @@
 @import './inter-font.css';
 @import './blog-post.css';
 @import './syntax-highlighter.css';
+
+body {
+  background-color: #fff;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #0f172a;
+  }
+}
