--- a/site/_layouts/blog-post.njk
+++ b/site/_layouts/blog-post.njk
@@ -3,12 +3,10 @@ layout: base.njk
 ---
 <main class="p-10 mt-24 lg:px-48 box-border">
   <div class="flex flex-row gap-2 mb-2">
-    {% for type in type %}
-    <span class="text-primary ring-1 ring-primary px-2 rounded-full">{{ type }}</span>
-    {% endfor %}
+    <span class="text-primary px-2 rounded-full">{{ type }}</span>
   </div>
 
-  <h1 class="text-4xl md:text-7xl lg:text-6xl font-black leading-none text-onBackground">
+  <h1 class="text-titleLarge md:text-7xl lg:text-6xl font-black leading-none text-onBackground">
     {{ title }}
   </h1>
   <p class="mt-4">{{ description }}</p>
@@ -16,7 +14,7 @@ layout: base.njk
     {% image socialImage, socialImageAlt or "Cover post" %}
   </div>
 
-  <div class="flex flex-row justify-between items-end text-secondary">
+  <div class="flex flex-row justify-between items-center text-secondary font-mono">
     {% if author.name %}
     <span class="flex flex-row gap-4 items-center">
       <span class="avatar rounded-full overflow-hidden object-cover w-10 h-10 [&_img]:w-full [&_img]:h-full">
@@ -26,38 +24,35 @@ layout: base.njk
     </span>
     {% endif %}
 
-    <p class="whitespace-nowrap">{{ page.date | humanReadableDate }}</p>
+    <p class="whitespace-nowrap border-l border-inherit pl-4">{{ page.date | humanReadableDate }}</p>
   </div>
 
-  <div class="bg-primary w-full h-[2px] mt-4 mb-10"></div>
+  <hr class="mt-4">
 
-  <article class="blog-post-container relative mx-auto flex max-w-8xl justify-center sm:px-2 lg:px-8 xl:px-12">
+  <article class="blog-post-container relative mx-auto max-w-8xl flex justify-center sm:px-2 lg:px-8 xl:px-12">
     <div class="content">
       {{ content | safe }}
     </div>
 
     {% if content | toc %}
-    <aside id="table-of-content" class="table-of-content hidden xl:sticky xl:top-[4.5rem] xl:-mr-6 xl:block xl:h-[calc(100vh-4.5rem)] xl:flex-none xl:overflow-y-auto xl:py-16 xl:pr-6">
-      <a href="#table-of-content"><h2 class="font-display text-md font-bold text-secondary">On this page</h2></a>
-      {{ content | toc | safe }}
-    </aside>
-  {% endif %}
+      <aside id="table-of-content" class="table-of-content hidden xl:sticky xl:top-[4.5rem] xl:-mr-6 xl:block xl:h-[calc(100vh-4.5rem)] xl:flex-none xl:overflow-y-auto xl:py-16 xl:pr-6">
+        <a href="#table-of-content"><h2 class="font-display text-md font-bold text-secondary">On this page</h2></a>
+        {{ content | toc | safe }}
+      </aside>
+    {% endif %}
+  </article>
 
-</article>
-<div class="flex flex-row flex-wrap justify-between gap-6 mt-24">
+<div class="mx-auto max-w-8xl flex justify-between sm:px-2 lg:px-8 xl:px-12">
   <a class="" href="{% editOnGitHub page %}" target="_blank">
     <svg class="inline-block" fill="currentColor" height="22" width="22" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960"><path d="M200-12q-33 0-56.5-23.5T120-92v-560q0-33 23.5-56.5T200-732h357l-80 80H200v560h560v-278l80-80v358q0 33-23.5 56.5T760-12H200Zm280-360Zm167-337 57 56-264 264v57h56l265-265 57 56-288 289H360v-170l287-287Zm171 168L647-709l100-100q24-24 57.5-24t56.5 24l56 57q23 23 23 56t-23 56l-99 99Z"/></svg>
     <span class="inline-block align-middle">Improve this page</span>
   </a>
 
-  <span class="text-lg">
-    <span class="font-bold">Keywords:</span>
-    {% for tag in keywords %}
-    <span class="text-tertiary">{{ tag }}</span>{% if not loop.last %},{% endif %}
-    {% endfor %}
+  <span class="font-mono">
+    Tags: <span>{{ keywords }}</span>
   </span>
 </div>
-</article>
+
 </main>
 
 {% include "structured-data/blog.njk" %}
