feat(style): add lexend font

--- a/site/_css/main.css
+++ b/site/_css/main.css
@@ -1,6 +1,7 @@
 @import '@alwatr/style/main.css';
 @import '@alwatr/style/palettes/h260.css';
 @import './inter-font.css';
+@import './lexend-font.css';
 @import './blog-post.css';
 @import './syntax-highlighter.css';
 
