--- a/site/_layouts/blog-post.njk
+++ b/site/_layouts/blog-post.njk
@@ -3,13 +3,13 @@ layout: base.njk
 ---
 <main class="p-10 mt-24 lg:px-48 box-border">
   <div class="flex flex-row gap-2 mb-2">
-    <span class="text-primary px-2 rounded-full">{{ type }}</span>
+    <span class="text-primary font-mono">{{ type }}</span>
   </div>
 
   <h1 class="text-titleLarge md:text-7xl lg:text-6xl font-black leading-none text-onBackground">
     {{ title }}
   </h1>
-  <p class="mt-4">{{ description }}</p>
+  <p class="mt-4 font-mono">{{ description }}</p>
   <div class="dark:brightness-90 rounded-lg overflow-clip select-none my-10 text-center drop-shadow-lg [&_img]:w-full">
     {% image socialImage, socialImageAlt or "Cover post" %}
   </div>
