refactor: use main tag for pages

--- a/site/en/about.njk
+++ b/site/en/about.njk
@@ -1,20 +1,21 @@
 ---
 title: About
 eleventyNavigation:
-  key: About
+key: About
 ---
-<div class="">
+<main>
   <div class="space-y-16 container xl:max-w-7xl mx-auto px-4 py-16 lg:px-8 lg:py-32">
-    <!-- Heading -->
     <div class="text-center">
-      <svg stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="text-yellow-300 mb-5 hi-outline hi-code inline-block w-24 h-24">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path>
+      <svg stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+        class="text-yellow-300 mb-5 hi-outline hi-code inline-block w-24 h-24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4">
+        </path>
       </svg>
       <h2 class="text-3xl md:text-4xl font-extrabold mb-4">
         Build Fast, Beautiful Websites with <span class="font-black">11ty</span>
       </h2>
       <h3 class="text-lg md:text-xl md:leading-relaxed font-medium text-gray-600 lg:w-2/3 mx-auto">
-         11ty is a static site generator that makes it easy to create fast, beautiful, and SEO-friendly websites.
+        11ty is a static site generator that makes it easy to create fast, beautiful, and SEO-friendly websites.
       </h3>
     </div>
 
@@ -23,37 +24,50 @@ eleventyNavigation:
     <div class="grid grid-cols-1 md:grid-cols-3 gap-16">
       <div>
         <h3 class="flex items-center space-x-2 text-lg font-bold uppercase tracking-wide mb-2">
-          <svg stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="opacity-50 hi-outline hi-heart inline-block w-8 h-8">
+          <svg stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+            class="opacity-50 hi-outline hi-heart inline-block w-8 h-8">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
           </svg>
           <span>Super fast</span>
         </h3>
         <p class="leading-relaxed text-gray-600">
-          11ty websites are very fast. This is because they are generated in advance and saved to the file system. There is no need to generate the site on the fly each time a user visits it, which can save a lot of time and resources. The speed of 11ty websites can be a major advantage, especially for websites with a lot of traffic. A fast website will provide a better user experience and can help you improve your website's search engine ranking.
+          11ty websites are very fast. This is because they are generated in advance and saved to the file system. There
+          is no need to generate the site on the fly each time a user visits it, which can save a lot of time and
+          resources. The speed of 11ty websites can be a major advantage, especially for websites with a lot of traffic.
+          A fast website will provide a better user experience and can help you improve your website's search engine
+          ranking.
         </p>
       </div>
       <div>
         <h3 class="flex items-center space-x-2 text-lg font-bold uppercase tracking-wide mb-2">
-          <svg stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="opacity-50 hi-outline hi-heart inline-block w-8 h-8">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path>
+          <svg stroke="currentColor" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+            class="opacity-50 hi-outline hi-heart inline-block w-8 h-8">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z">
+            </path>
           </svg>
           <span>SEO-friendly</span>
         </h3>
         <p class="leading-relaxed text-gray-600">
-          11ty websites are easily crawled and indexed by search engines. This means that your website will be more likely to appear in search results, which can help you attract more visitors.
+          11ty websites are easily crawled and indexed by search engines. This means that your website will be more
+          likely to appear in search results, which can help you attract more visitors.
         </p>
       </div>
       <div>
         <h3 class="flex items-center space-x-2 text-lg font-bold uppercase tracking-wide mb-2">
-          <svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" class="opacity-50 hi-outline hi-heart inline-block w-8 h-8">
-            <path fill-rule="evenodd" d="M9.504 1.132a1 1 0 01.992 0l1.75 1a1 1 0 11-.992 1.736L10 3.152l-1.254.716a1 1 0 11-.992-1.736l1.75-1zM5.618 4.504a1 1 0 01-.372 1.364L5.016 6l.23.132a1 1 0 11-.992 1.736L4 7.723V8a1 1 0 01-2 0V6a.996.996 0 01.52-.878l1.734-.99a1 1 0 011.364.372zm8.764 0a1 1 0 011.364-.372l1.733.99A1.002 1.002 0 0118 6v2a1 1 0 11-2 0v-.277l-.254.145a1 1 0 11-.992-1.736l.23-.132-.23-.132a1 1 0 01-.372-1.364zm-7 4a1 1 0 011.364-.372L10 8.848l1.254-.716a1 1 0 11.992 1.736L11 10.58V12a1 1 0 11-2 0v-1.42l-1.246-.712a1 1 0 01-.372-1.364zM3 11a1 1 0 011 1v1.42l1.246.712a1 1 0 11-.992 1.736l-1.75-1A1 1 0 012 14v-2a1 1 0 011-1zm14 0a1 1 0 011 1v2a1 1 0 01-.504.868l-1.75 1a1 1 0 11-.992-1.736L16 13.42V12a1 1 0 011-1zm-9.618 5.504a1 1 0 011.364-.372l.254.145V16a1 1 0 112 0v.277l.254-.145a1 1 0 11.992 1.736l-1.735.992a.995.995 0 01-1.022 0l-1.735-.992a1 1 0 01-.372-1.364z" clip-rule="evenodd"></path>
+          <svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"
+            class="opacity-50 hi-outline hi-heart inline-block w-8 h-8">
+            <path fill-rule="evenodd"
+              d="M9.504 1.132a1 1 0 01.992 0l1.75 1a1 1 0 11-.992 1.736L10 3.152l-1.254.716a1 1 0 11-.992-1.736l1.75-1zM5.618 4.504a1 1 0 01-.372 1.364L5.016 6l.23.132a1 1 0 11-.992 1.736L4 7.723V8a1 1 0 01-2 0V6a.996.996 0 01.52-.878l1.734-.99a1 1 0 011.364.372zm8.764 0a1 1 0 011.364-.372l1.733.99A1.002 1.002 0 0118 6v2a1 1 0 11-2 0v-.277l-.254.145a1 1 0 11-.992-1.736l.23-.132-.23-.132a1 1 0 01-.372-1.364zm-7 4a1 1 0 011.364-.372L10 8.848l1.254-.716a1 1 0 11.992 1.736L11 10.58V12a1 1 0 11-2 0v-1.42l-1.246-.712a1 1 0 01-.372-1.364zM3 11a1 1 0 011 1v1.42l1.246.712a1 1 0 11-.992 1.736l-1.75-1A1 1 0 012 14v-2a1 1 0 011-1zm14 0a1 1 0 011 1v2a1 1 0 01-.504.868l-1.75 1a1 1 0 11-.992-1.736L16 13.42V12a1 1 0 011-1zm-9.618 5.504a1 1 0 011.364-.372l.254.145V16a1 1 0 112 0v.277l.254-.145a1 1 0 11.992 1.736l-1.735.992a.995.995 0 01-1.022 0l-1.735-.992a1 1 0 01-.372-1.364z"
+              clip-rule="evenodd"></path>
           </svg>
           <span>Flexibility</span>
         </h3>
         <p class="leading-relaxed text-gray-600">
-          11ty is a flexible static site generator that can be used to create a wide range of websites. It is easy to use and has a lot of features that make it easy to create beautiful websites.
+          11ty is a flexible static site generator that can be used to create a wide range of websites. It is easy to
+          use and has a lot of features that make it easy to create beautiful websites.
         </p>
       </div>
     </div>
   </div>
-</div>
+</main>
