--- a/site/_includes/header.njk
+++ b/site/_includes/header.njk
@@ -1,7 +1,7 @@
 <header class="header flex flex-row justify-between items-center w-screen fixed px-4 py-4 gap-10 z-20">
   <a href="/"><img class="w-10" src="/img/logo.png" alt="logo"></a>
   <div class="flex flex-row justify-end grow gap-8 items-center text-md font-bold">
-    {% for menu in collections.all | eleventyNavigation %}
+    {% for menu in navigation.topAppBar %}
       <a class="text-neutral-700 hidden lg:block hover:text-neutral-700 hover:no-underline {% if page.url == menu.url %} text-neutral-950 {% endif %}" href="{{ menu.url }}">
         {{ menu.key }}
       </a>
